--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html,body{height: 100%;}
     background-color: #d6d6d6;
     top: 65px;
     right: 0;
-    width: 400px;
+    width: 30%;
     height: calc(100% - 65px);
     padding: 20px;
     box-shadow: 0px 0px 5px 1px #555;
@@ -105,6 +105,7 @@ p.lexError {
 	background: #eee;
 	padding: 100px 0 30px 0;
 	height: calc(100% - 90px);
+	width: 70%;
 }
 .card-profile .card-avatar, .card-testimonial .card-avatar {
 	max-width: 130px;
@@ -136,12 +137,8 @@ p.lexError {
 
 .card-caption {
     font-weight: 700;
-    font-family: "Roboto Slab", "Times New Roman", serif;
+	font-size: 18px;
 }
 .card .table {
     padding: 15px 30px;
-}
-
-@media (max-width: 576px) {
-	.section-gray{display: none;}
 }
